[gd_scene load_steps=11 format=3 uid="uid://b2dmsrk6j12y4"]

[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/solana_service.gd" id="1_hwc3u"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/TransactionManager/transaction_manager.gd" id="2_v3adq"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/wallet_service.gd" id="5_f327g"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/ThirdPartyTools/Helius/helius_api.gd" id="6_jo0rl"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Utility/account_inspector.gd" id="6_mv3j8"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Utility/file_loader.gd" id="7_4sv1b"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/asset_manager.gd" id="8_4oy84"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Utility/shdwdrive_creator.gd" id="9_m6qd0"]
[ext_resource type="Texture2D" uid="uid://dkyfoudbohuqq" path="res://addons/SolanaSDK/Textures/missingicon.png" id="9_oi842"]
[ext_resource type="Script" path="res://addons/SolanaSDK/Scripts/Managers/candy_machine_manager.gd" id="9_pob61"]

[node name="SolanaService" type="Node"]
script = ExtResource("1_hwc3u")
mainnet_rpc = "https://api.mainnet-beta.solana.com"
devnet_rpc = "https://api.devnet.solana.com"
sonic_rpc = "https://www.devnet.sonic.game"
honeycomb_rpc = "https://rpc.test.honeycombprotocol.com/"

[node name="WalletService" type="Node" parent="."]
script = ExtResource("5_f327g")
custom_wallet_path = "C:\\Users\\thoma\\Desktop\\kp\\dev2gUnXyMLh6WyV9NTBaXeNfo1DTn2R4b69VTGNidF.json"

[node name="WalletAdapter" type="WalletAdapter" parent="WalletService"]

[node name="AssetManager" type="Node" parent="."]
script = ExtResource("8_4oy84")
load_token_balances = true
log_loaded_assets = true
missing_texture_visual = ExtResource("9_oi842")

[node name="TransactionManager" type="Node" parent="." node_paths=PackedStringArray("helius_api")]
script = ExtResource("2_v3adq")
helius_api = NodePath("../HeliusAPI")
fallback_compute_unit_price = 80000

[node name="FileLoader" type="Node" parent="."]
script = ExtResource("7_4sv1b")

[node name="AccountInspector" type="Node" parent="."]
script = ExtResource("6_mv3j8")

[node name="CandyMachineManager" type="Node" parent="."]
script = ExtResource("9_pob61")

[node name="ShdwDriveCreator" type="Node" parent="."]
script = ExtResource("9_m6qd0")
selected_storage = "test storage"

[node name="HeliusAPI" type="Node" parent="."]
script = ExtResource("6_jo0rl")
helius_api_key = "14091e35-f13b-4071-9578-410522205b40"
using_paid_plan = true
priority_fee_level = 3
fee_to_consider_congested = 10001
